// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> Render must match bottom() 1`] = `
<div
  className="position-relative text-center"
>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--bottom mx-auto mb-2"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        autoFocus={false}
        className="mt-2 text-bold btn btn-outline"
        data-test={null}
        id={null}
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
  <button
    autoFocus={false}
    className="btn btn-primary"
    data-test={null}
    id={null}
    onClick={[Function]}
    type="button"
  >
    UI
  </button>
</div>
`;

exports[`<Popover /> Render must match bottomLeft() 1`] = `
<div
  className="position-relative"
>
  <div
    className={
      Object {
        "pl-2": true,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--bottom-left mb-2"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        autoFocus={false}
        className="mt-2 text-bold btn btn-outline"
        data-test={null}
        id={null}
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
  <button
    autoFocus={false}
    className="btn btn-primary"
    data-test={null}
    id={null}
    onClick={[Function]}
    type="button"
  >
    UI
  </button>
</div>
`;

exports[`<Popover /> Render must match bottomRight() 1`] = `
<div
  className="position-relative text-right pr-2"
>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--bottom-right mb-2"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        autoFocus={false}
        className="mt-2 text-bold btn btn-outline"
        data-test={null}
        id={null}
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
  <button
    autoFocus={false}
    className="btn btn-primary"
    data-test={null}
    id={null}
    onClick={[Function]}
    type="button"
  >
    UI
  </button>
</div>
`;

exports[`<Popover /> Render must match left() 1`] = `
<div
  className="position-relative"
>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--left"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        autoFocus={false}
        className="mt-2 text-bold btn btn-outline"
        data-test={null}
        id={null}
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;

exports[`<Popover /> Render must match leftBottom() 1`] = `
<div
  className="position-relative"
>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--left-bottom"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        autoFocus={false}
        className="mt-2 text-bold btn btn-outline"
        data-test={null}
        id={null}
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;

exports[`<Popover /> Render must match leftTop() 1`] = `
<div
  className="position-relative"
>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--left-top"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        autoFocus={false}
        className="mt-2 text-bold btn btn-outline"
        data-test={null}
        id={null}
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;

exports[`<Popover /> Render must match regular() 1`] = `
<div
  className="position-relative text-center"
>
  <button
    autoFocus={false}
    className="btn btn-primary"
    data-test={null}
    id={null}
    onClick={[Function]}
    type="button"
  >
    UI
  </button>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": true,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large mx-auto mt-2"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        autoFocus={false}
        className="mt-2 text-bold btn btn-outline"
        data-test={null}
        id={null}
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;

exports[`<Popover /> Render must match regularLarge() 1`] = `
<div
  className="position-relative text-center"
>
  <button
    autoFocus={false}
    className="btn btn-primary"
    data-test={null}
    id={null}
    onClick={[Function]}
    type="button"
  >
    UI
  </button>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": true,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large mx-auto mt-2 Popover-message--large"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        autoFocus={false}
        className="mt-2 text-bold btn btn-outline"
        data-test={null}
        id={null}
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;

exports[`<Popover /> Render must match right() 1`] = `
<div
  className="position-relative"
>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--right"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        autoFocus={false}
        className="mt-2 text-bold btn btn-outline"
        data-test={null}
        id={null}
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;

exports[`<Popover /> Render must match rightBottom() 1`] = `
<div
  className="position-relative"
>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--right-bottom"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        autoFocus={false}
        className="mt-2 text-bold btn btn-outline"
        data-test={null}
        id={null}
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;

exports[`<Popover /> Render must match rightTop() 1`] = `
<div
  className="position-relative"
>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--right-top"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        autoFocus={false}
        className="mt-2 text-bold btn btn-outline"
        data-test={null}
        id={null}
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;

exports[`<Popover /> Render must match topLeft() 1`] = `
<div
  className="position-relative"
>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": false,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large Popover-message--top-left"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        autoFocus={false}
        className="mt-2 text-bold btn btn-outline"
        data-test={null}
        id={null}
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;

exports[`<Popover /> Render must match topRight() 1`] = `
<div
  className="position-relative text-center"
>
  <button
    autoFocus={false}
    className="btn btn-primary"
    data-test={null}
    id={null}
    onClick={[Function]}
    type="button"
  >
    UI
  </button>
  <div
    className={
      Object {
        "pl-2": false,
        "right-0 left-0": true,
      }
    }
  >
    <div
      className="Popover-message text-left p-4 Box box-shadow-large mx-auto mt-2"
    >
      <h4
        className="mb-2"
      >
        Popover heading
      </h4>
      <p>
        Message about this particular piece of UI.
      </p>
      <button
        autoFocus={false}
        className="mt-2 text-bold btn btn-outline"
        data-test={null}
        id={null}
        onClick={[Function]}
        type="button"
      >
        Got it!
      </button>
    </div>
  </div>
</div>
`;
